--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "@types/react-dom": "^17.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-scripts": "4.0.3",
-        "typescript": "^4.1.2"
+        "react-scripts": "4.0.3"
     },
     "scripts": {
         "test": "react-scripts test",
@@ -38,6 +37,7 @@
     "devDependencies": {
         "husky": "^7.0.0",
         "prettier": "^2.4.1",
-        "pretty-quick": "^3.1.1"
+        "pretty-quick": "^3.1.1",
+        "typescript": "^4.8.4"
     }
 }
